--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Development portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   <h1>heading tag</h1>
+    <section>
+
+        <div class="name-image">
+            <h1>Welcome To</h1>
+            <h1> <span id="peter">Mahfuz Shamim</span> World</h1>
+            <h3>I am a Fornt-End Web Developer</h3>
+            <p>I am a forn-end web developer. I am expert in React and React Native. I can design website and webpage as
+                per
+                you want. I can design website and make it so beautiful and charming. Hope you will get the best work
+                from
+                me. thanks</p>
+            <a class="link-class" target="_blank" href="https://www.facebook.com/shamim.theking.14/photos_by">HIRE
+                ME</a>
+
+        </div>
+
+        <div class="name-image">
+
+            <<img src="images/my-bg2.png" alt="">
+
+        </div>
+
+
+    </section>
+
+
 </body>
+
 </html>
