--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="banner">
 
         <div class="name-image">
             <h1>Welcome To</h1>
