--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 you want. I can design website and make it so beautiful and charming. Hope you will get the best work
                 from
                 me. thanks</p>
+            <br>
             <a class="link-class" target="_blank" href="https://www.facebook.com/shamim.theking.14/photos_by">HIRE
                 ME</a>
 
@@ -31,12 +32,30 @@
 
         <div class="name-image">
 
-            <<img src="images/my-bg2.png" alt="">
+            <<img src="images/my-bg.png" alt="">
 
         </div>
 
 
     </section>
+
+    <Section class="dream-big">
+        <div class="name-image">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+
+        <div class="name-image">
+            <h1> Dream Big</h1>
+            <h5> Become a Full Stack Developer</h5>
+            <p>I have already learned basic HTML and CSS. I can Busild a simple website and it is just a font-end
+                design.I will make 3 website to build my bsic knowledge on HTML and CSS. I wish I were a full stack web
+                developer in future</p><br>
+            <a class="link-class" target="_blank" href="https://www.facebook.com/shamim.theking.14/photos_by">DOWNLOAD
+                RESUME</a>
+
+        </div>
+
+    </Section>
 
 
 </body>
