--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <section class="banner">
+    <section class="banner section-flex">
 
         <div class="name-image">
             <h1>Welcome To</h1>
             <h1> <span id="peter">Mahfuz Shamim</span> World</h1>
-            <h3>I am a Fornt-End Web Developer</h3>
+            <h3 class="orange-color">I am a Fornt-End Web Developer</h3>
             <p>I am a forn-end web developer. I am expert in React and React Native. I can design website and webpage as
                 per
                 you want. I can design website and make it so beautiful and charming. Hope you will get the best work
@@ -39,14 +39,14 @@
 
     </section>
 
-    <Section class="dream-big">
+    <Section class="dream-big section-flex">
         <div class="name-image">
             <img src="images/my-bg2.png" alt="">
         </div>
 
         <div class="name-image">
             <h1> Dream Big</h1>
-            <h5> Become a Full Stack Developer</h5>
+            <h3 class="orange-color"> Become a Full Stack Developer</h3>
             <p>I have already learned basic HTML and CSS. I can Busild a simple website and it is just a font-end
                 design.I will make 3 website to build my bsic knowledge on HTML and CSS. I wish I were a full stack web
                 developer in future</p><br>
@@ -57,7 +57,35 @@
 
     </Section>
 
+    <section class="experience">
+        <h1>Experiences</h1>
+
+        <div class="section-flex ">
+            <div class="shadow blue-border">
+                <h1>Full stack Developer</h1>
+                <h3 class="orange-color">2019-Present | Pro Level Developper</h3>
+                <p>I am working as a Full Stack developer and working with a project base work on Fiverr and Upwork. i
+                    have
+                    also some clients on direct contact and I am handeling my work here with my 3 team mates. i have a
+                    marketing expert to spreed my business all over the world</p>
+            </div>
+
+            <div class="shadow orange-border">
+                <h1>Fontend Developer</h1>
+                <h3 class="orange-color">2019-Present | Fontend Developper</h3>
+                <p>I am working as a Font-End developer and working with a project base work on Fiverr and Upwork. i
+                    have
+                    also some clients on direct contact and I am handeling my work here with my 3 team mates. i have a
+                    marketing expert to spreed my business all over the world</p>
+            </div>
+        </div>
+
+
+    </section>
+
 
 </body>
+
+<footer>@All Right Reserve to <span class="me">Mahfuz Shamim</span></footer>
 
 </html>
